--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,31 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
+    }
+
+    .angular-playground-text {
+      font-family: 'Arial', sans-serif;
+      font-size: 2em;
+      font-weight: bold;
+      background: linear-gradient(to right, #3498db, #2ecc71);
+      -webkit-background-clip: text;
+      color: transparent;
+      text-align: center;
+      padding: 10px;
+      border-radius: 10px;
+    }
+  </style>
 </head>
-<body>
+<body >
+<div class="angular-playground-text">Angular Playground</div>
   <app-root></app-root>
 </body>
 </html>
