--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
-    body {
+    /* body {
       display: flex;
       justify-content: center;
       align-items: center;
       margin: 0;
       background-color: #f0f0f0;
-    }
+    } */
   </style>
 </head>
 <body>
