--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
       background-color: #f0f0f0;
     } */
   </style>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
